--- a/Views/Account/ForgotPassword.cshtml
+++ b/Views/Account/ForgotPassword.cshtml
@@ -70,7 +70,7 @@
 
                                     <div class="text-center">
 
-                                        @Html.ActionLink("Remeber your password? Login Here!", "Login")
+                                        @Html.ActionLink("Remember your password? Login Here!", "Login")
 
                                     </div>
                                     <div class="text-center">
