--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -87,7 +87,7 @@
                             <div class="nav-item active">
                                 <a class="collapse-item" href="@Url.Action("ManageProjects", "Admin")">
                                     <i></i>
-                                    <span>Manage Projects</span>
+                                    <span>Assign Projects</span>
                                 </a>
                             </div>
                         </div>
@@ -111,19 +111,7 @@
                 </a>
             </div>
 
-            <div class="nav-item active">
-                <a class="nav-link" href="@Url.Action("Index", "TicketAttachments")">
-                    <i class="fas fa-paperclip"></i>
-                    <span>Tickets Attachments</span>
-                </a>
-            </div>
-
-            <div class="nav-item active">
-                <a class="nav-link" href="@Url.Action("Index", "TicketHistories")">
-                    <i class="fas fa-history"></i>
-                    <span>Ticket Histories</span>
-                </a>
-            </div>
+            
 
             <div class="nav-item active">
                 <a class="nav-link" href="@Url.Action("Index", "TicketNotifications")">
