--- a/Views/Admin/ManageRoles.cshtml
+++ b/Views/Admin/ManageRoles.cshtml
@@ -3,56 +3,89 @@
     ViewBag.Title = "ManageRoles";
 }
 
-<h2>ManageRoles</h2>
 
 <div class="row">
-    <div class="col-md-6">
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
-            <div class="row">
-                <div class="col-md-12">
-                    @Html.ListBox("UserIds", null, new {@class ="" })
-                </div>
+    <div class="col-lg-6">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">Assign Users to Roles</h6>
             </div>
-            <div class="row">
-                <div class="col-md-12">
-                    @Html.DropDownList("Role", null,"--Select Role--", new {@class ="" })
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
-            </div>
-        }
+            <div class="card-body">
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
 
+                    
+                        <div class="col-6">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h6>Choose User</h6>
+                                </div>
+                                <div class="col-md-12">
+                                    @Html.DropDownList("UserIds", null, "--Select User--", new { @class = "form-control" })
+                                </div>
+                            </div>
+
+                            <hr />
+
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h6>Choose Role</h6>
+                                </div>
+                                <div class="col-md-12">
+                                    @Html.DropDownList("Role", null, "--Select Role--", new { @class = "form-control" })
+                                </div>
+                            </div>
+
+                            <hr />
+
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </div>
+                            </div>
+                        </div>   
+                }
+            </div>
+        </div>
     </div>
-    <div class="col-md-6">
-        <table class="table">
-            <tr>
-                <th>
-                    @Html.DisplayName("User Name")
-                </th>
-                <th>
-                    @Html.DisplayName("Role")
-                </th>
-                
-            </tr>
 
-            @foreach (var user in Model)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(model => user.UserName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(model => user.RoleName)
-                    </td> 
-                </tr>
-            }
+    <div class="col-lg-6">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">User List</h6>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <th>
+                                    @Html.DisplayName("User")
+                                </th>
+                                <th>
+                                    @Html.DisplayName("Role")
+                                </th>
 
-        </table>
+                            </tr>
+                        </thead>
 
+
+                        @foreach (var user in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(model => user.UserName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(model => user.RoleName)
+                                </td>
+                            </tr>
+                        }
+
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
