--- a/Views/TicketAttachments/Delete.cshtml
+++ b/Views/TicketAttachments/Delete.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Ticket.SubmiterId)
+            @Html.DisplayNameFor(model => model.Ticket.SubmiterID)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Ticket.SubmiterId)
+            @Html.DisplayFor(model => model.Ticket.SubmiterID)
         </dd>
 
         <dt>
@@ -57,8 +57,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-danger" />   
         </div>
     }
 </div>
