--- a/Views/Tickets/Index.cshtml
+++ b/Views/Tickets/Index.cshtml
@@ -25,7 +25,7 @@
                 <thead>
                     <tr>
                         <th>
-                            @Html.DisplayNameFor(model => model.Project.Name)
+                            @Html.DisplayName("Project")
                         </th>
                         <th>
                             @Html.DisplayName("Submiter")
@@ -42,15 +42,8 @@
                         <th>
                             @Html.DisplayNameFor(model => model.Title)
                         </th>
-                        
-                        <th>
-                            @Html.DisplayName("Assigned")
-                        </th>
                         <th>
                             @Html.DisplayNameFor(model => model.Created)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Updated)
                         </th>
 
                         <th></th>
@@ -77,21 +70,15 @@
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Title)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Developer.DisplayName)
-                        </td>
+                        </td> 
                         <td>
                             @Html.DisplayFor(modelItem => item.Created)
                         </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Updated)
-                        </td>
 
                         <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success" }) |
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning" }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
                         </td>
                     </tr>
                 }
