--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -4,10 +4,11 @@
     ViewBag.Title = "Projects";
 }
 
-<h2>Projects</h2>
 
-@if (User.IsInRole("Admin"))
+
+@if (User.IsInRole("Admin") || User.IsInRole("Manager"))
 {
+    <h2>Projects</h2>
     <p>
         <a class="btn btn-primary" href="@Url.Action("Create", "Projects")">Create New</a>
     </p>
@@ -50,10 +51,10 @@
                             @Html.DisplayFor(modelItem => item.Created)
                         </td>
                         <td>
- 
-                            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success"}) |
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning"}) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger"})
+
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success" }) |
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning" }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
                         </td>
                     </tr>
                 }
