--- a/Views/Tickets/Index.cshtml
+++ b/Views/Tickets/Index.cshtml
@@ -1,7 +1,10 @@
-﻿@model IEnumerable<Bug_Tracker.Models.Ticket>
+﻿@using Bug_Tracker.Helpers
+@model IEnumerable<Bug_Tracker.Models.Ticket>
 
 @{
     ViewBag.Title = "Tickets";
+
+    var tickets = new TicketHelper();
 }
 
 <h2>Tickets</h2>
@@ -50,7 +53,7 @@
                     </tr>
                 </thead>
 
-                @foreach (var item in Model)
+                @foreach (var item in tickets.ListMyTickets())
                 {
                     <tr>
                         <td>
@@ -78,7 +81,12 @@
                         <td>
                             @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success" }) |
                             @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning" }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
+
+                            @if (User.IsInRole("Admin") || User.IsInRole("Manager"))
+                            {
+                                @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
+                            }
+
                         </td>
                     </tr>
                 }
