--- a/Views/TicketAttachments/Delete.cshtml
+++ b/Views/TicketAttachments/Delete.cshtml
@@ -4,60 +4,68 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>TicketAttachment</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Ticket.SubmiterID)
-        </dt>
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold">Delete Attachment</h6>
+    </div>
+    <div class="card-body">
+        <h3>Are you sure you want to delete this?</h3>
+        <div>
+            <h4>TicketAttachment</h4>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Ticket.SubmiterID)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Ticket.SubmiterID)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Ticket.SubmiterID)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.User.FirstName)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.User.FirstName)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.User.FirstName)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.User.FirstName)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Summary)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Summary)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Summary)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Summary)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Created)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Created)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Created)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Created)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.FilePath)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.FilePath)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.FilePath)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.FilePath)
+                </dd>
 
-    </dl>
+            </dl>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-danger" />   
+                <div class="form-actions no-color">
+                    <input type="submit" value="Delete" class="btn btn-danger" />
+                </div>
+            }
         </div>
-    }
+
+    </div>
 </div>
