--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -100,7 +100,7 @@
                         </td>
                         
                         <td>
-                            <a href="@Url.Action("Details","Tickets", new { id = Ticket.Id })" class = "btn btn-success">Detials</a> |
+                            <a href="@Url.Action("Details","Tickets", new { id = Ticket.Id })" class = "btn btn-success">Details</a> |
                             @Html.ActionLink("Edit", "Edit", new { id = Ticket.Id }, new { @class = "btn btn-warning" }) |
                             @Html.ActionLink("Delete", "Delete", new { id = Ticket.Id }, new { @class = "btn btn-danger" })
 
