--- a/Views/Admin/ManageRoles.cshtml
+++ b/Views/Admin/ManageRoles.cshtml
@@ -15,7 +15,7 @@
                 {
                     @Html.AntiForgeryToken()
 
-                    
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="col-6">
                             <div class="row">
                                 <div class="col-md-12">
@@ -23,6 +23,7 @@
                                 </div>
                                 <div class="col-md-12">
                                     @Html.DropDownList("UserIds", null, "--Select User--", new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
@@ -34,6 +35,7 @@
                                 </div>
                                 <div class="col-md-12">
                                     @Html.DropDownList("Role", null, "--Select Role--", new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.RoleName, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
