--- a/Views/Admin/ManageRoles.cshtml
+++ b/Views/Admin/ManageRoles.cshtml
@@ -22,7 +22,7 @@
                                     <h6>Choose User</h6>
                                 </div>
                                 <div class="col-md-12">
-                                    @Html.DropDownList("UserIds", null, "--Select User--", new { @class = "form-control" })
+                                    @Html.DropDownList("UserId", null, "--Select User--", new { @class = "form-control" })
                                     
                                 </div>
                             </div>
