--- a/Views/Tickets/Details.cshtml
+++ b/Views/Tickets/Details.cshtml
@@ -18,7 +18,7 @@
             <div class="small text-gray-500">Created · @Html.DisplayFor(model => model.Created)</div>
             <div class="small text-gray-500">Last Updated · @Html.DisplayFor(model => model.Updated)</div>
 
-            <b>@Html.DisplayName("Discription:")</b>
+            <b>@Html.DisplayName("Description:")</b>
             @Html.DisplayFor(model => model.Discription)
 
             <hr />
